apps/dispatcharr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatcharr
  namespace: media
  labels:
    app: dispatcharr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatcharr
  template:
    metadata:
      labels:
        app: dispatcharr
    spec:
      containers:
        - name: dispatcharr
          image: ghcr.io/dispatcharr/dispatcharr:latest@sha256:c9920ece0dd653c12ac251aa406351a3006043200f02054472d34c417e365190
          ports:
            - containerPort: 9191
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
